[package]
name = "nyantec-cert-auth-server"
version = "0.1.1"
authors = ["The cert-auth Authors <oss@nyantec.com>"]
edition = "2021"
license = "MirOS"

[dependencies]
der-parser = "5.1"
hyper = { version = "0.14", features = [ "server", "http1", "tcp" ] }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
tokio = { version = "1.5", features = [ "rt-multi-thread", "macros" ] }
urlencoding = "1.3"
x509-parser = "0.9"
nyantec-cert-auth = "0.1.0"
