[package]
name = "nyantec-cert-auth-server"
version = "1.0.0"
authors = ["The cert-auth Authors <oss@nyantec.com>"]
edition = "2021"
description = "A web server for validating X.509 Client Certificates"
repository = "https://github.com/nyantec/nyantec-cert-auth-server"
license = "MirOS"

[dependencies]
clap = { version = "3.1.18", features = ["derive"] }
der-parser = "5.1"
hyper = { version = "0.14", features = [ "server", "http1", "tcp" ] }
jsonwebtoken = "7.2"
rand = "0.8.4"
reqwest = { version = "0.11.9", features = [ "json" ] }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
tokio = { version = "1.5", features = [ "rt-multi-thread", "macros" ] }
urlencoding = "1.3"
x509-parser = "0.9"
nyantec-cert-auth = "0.1.1"
